# LetItGo

./: .gitmodules  AGENTS.md  Cargo.toml  README.md  SPECS.md  TODO.md
.github/workflows/: ci.yml  smoke-advanced.yml  smoke-core.yml  smoke-lignore.yml
src/: cache.rs  clean.rs  cli.rs  config.rs  error.rs  ignore_resolver.rs  integration_tests.rs  lib.rs  main.rs  scanner.rs  smoke_tests.rs  tmutil.rs
tests/: integration.rs  smoke.rs
